--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ itertools = {version = "0.10.1", default-features = false}
 hashbrown = {version = "0.11.2", default-features=false, features = ["ahash"]}
 rayon = {version = "1.3", optional = true}
 cfg-if = "1.0"
+num-traits = "0.2.14"
 
 [dev-dependencies]
 tempdir = "0.3"
