CS refactor + Trait additions for embedded curves (#5)
* tmp

* Add PhantomData for T and P in Composer

* tmp3

* tmp3

* Continue adding bounds to Standard Composer

* Replace Jubjub for generic embeded curve

* Fix permutation file

* Implement changes to util

* Fix field errors

* Apply cargo fmt

* Replace PublicParams with UniversalParams

* Address review nits

* Move setup as public function

* Call setup as public function

* Add bounds to standard composer

* Update fixed_base.rs to arkworks backend

* Port variable_base_gate tests to arkworks backend

* Add ark-bls12-381 = "0.3"
ark-ed-on-bls12-381 = "0.3" to Cargo.toml

* Finnish refactor over CS/ecc module

* Update `util` tests to use arkworks backend

* Update `circuit` tests to use arkworks backend

* Update `CS/arithmetic` tests to use arkworks backend

* Update `CS/boolean` tests to use arkworks backend

* Update `CS/composer` tests to use arkworks backend

* Update `CS/helper` tests to use arkworks backend

* Update `CS/logic` tests to use arkworks backend

* Update `CS/range` tests to use arkworks backend

Co-authored-by: David Nevado <david@davidnevado.xyz>
Co-authored-by: David Nevado <david.nevado@iohk.io>
Co-authored-by: Luke Pearson <lukepearson@Luke-Pearsons-MacBook-Pro.local>
Co-authored-by: Luke Pearson <pearsonluke73@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,8 @@ num-traits = "0.2.14"
 
 [dev-dependencies]
 tempdir = "0.3"
+ark-bls12-381 = "0.3"
+ark-ed-on-bls12-381 = "0.3"
 
 [features]
 default = ["std"]
