--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,8 +33,6 @@ merlin = {version = "3.0", default-features = false}
 rand_core = {version="0.6", default-features=false}
 itertools = {version = "0.10.1", default-features = false}
 hashbrown = {version = "0.11.2", default-features=false, features = ["ahash"]}
-rayon = {version = "1.3", optional = true}
-cfg-if = "1.0"
 num-traits = "0.2.14"
 
 [dev-dependencies]
@@ -44,12 +42,20 @@ ark-ed-on-bls12-381 = "0.3"
 rand = "0.8.0"
 
 [features]
-default = ["std"]
-std = [
+default = [
     "rand_core/std",
     "itertools/default",
-    "hashbrown/default",
-    "rayon"
+    "parallel",
+    "asm"
+    ]
+parallel = [
+    "ark-ff/parallel",
+    "ark-poly/parallel",
+    "ark-ec/parallel",
+    "ark-poly-commit/parallel"
+]
+asm = [
+    "ark-ff/asm"
 ]
 trace = []
 trace-print = ["trace"]
