--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ ark-bls12-377 = "0.3"
 ark-ed-on-bls12-381 = "0.3"
 ark-ed-on-bls12-377 = "0.3"
 rand = "0.8.0"
+paste = "1.0.6"
 
 [features]
 default = [
