--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,11 +24,11 @@ license = "MPL-2.0"
 edition = "2018"
 
 [dependencies]
-ark-ec = "0.3"
-ark-ff = "0.3"
+ark-ec = { version = "0.3", features = ["std"] }
+ark-ff = { version = "0.3", features = ["std"] }
 ark-poly = "0.3"
 ark-poly-commit = "0.3"
-ark-serialize = "0.3"
+ark-serialize = { version = "0.3", features = ["derive"] }
 merlin = {version = "3.0", default-features = false}
 rand_core = {version="0.6", default-features=false}
 itertools = {version = "0.10.1", default-features = false}
