Update tests for generic Engines and Curves. (#25)
* Add new curves dependencies

* Update `point_addition_gate` to test on generic curves

* Update `variable_base_scalar_mul` test to be used on generic curves

* Reduce scalar in `variable_base_scalar_mul` test to fit in `Bls12-377`

* Update ecc tests to be used in generic curves

* Reduce scalar in `test_ecc_constraint` to fit in `Bls12-377`

* Update arithmetic ops tests to be used in generic curves

* Add `batch_test` macro

* Update tests with `batch_test` macro

* Add support for panic tests in `batch_test` macro

* Update tests with `batch_test` macro

* Update tests with new macro syntax

* Update permutation tests

* Update range tests

* Update proof_system tests

* Remove `ProjectiveCurve` trait from tests

* Update `batch_test` doc

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,10 @@ name = "ark-plonk"
 version = "0.8.2"
 authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>",
            "Luke Pearson <luke@polychain.capital>",
-           "Jules De Smit <jules@aleo.org>", 
+           "Jules De Smit <jules@aleo.org>",
            "Joshua Fitzgerald <joshua@heliax.dev>",
            "Carlos Perez <carlos.perezbaro@iohk.io>",
-           "David Nevado <david.nevado@iohk.io>"] 
+           "David Nevado <david.nevado@iohk.io>"]
 readme = "README.md"
 repository = "https://github.com/rust-zkp/ark-plonk"
 keywords = ["cryptography", "plonk", "zk-snarks", "zero-knowledge", "crypto"]
@@ -38,8 +38,11 @@ num-traits = "0.2.14"
 [dev-dependencies]
 tempdir = "0.3"
 ark-bls12-381 = "0.3"
+ark-bls12-377 = "0.3"
 ark-ed-on-bls12-381 = "0.3"
+ark-ed-on-bls12-377 = "0.3"
 rand = "0.8.0"
+paste = "1.0.6"
 
 [features]
 default = [
