fix: resolve comments, suggestions, and some formatting
- fixed some `clippy` lints directly instead of leaving `allow` cues, left others for future refactoring
- fixed old jubjub comment
- removed `crate::error::Result` type
- remove some type declaration redundancies
- sorted `derive` macro invocations
- added warning denial to CI
- resolved other PR comments

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,12 +27,12 @@ jobs:
       - name: Run clippy
         with:
           command: clippy
-          args: --verbose --release --workspace --examples --tests --all-features
+          args: --verbose --release --workspace --examples --tests --all-features -- -D warnings
       - name: Run tests
         uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --verbose --release --workspace --all-features
+          args: --verbose --release --workspace --all-features -- -D warnings
 
   build:
     if: github.event.pull_request.draft == false
