Improve Code Quality (#38)
* Add logic operations between field elements

Add explicit loop for logic operations AND and XOR in feature
`trace` code.

* Update to edition 2021

* fix: improve code quality standards across the crate

- fixed clippy suggestions or marked where clippy is wrong
- fixed broken doc links
- removed `get_domain_attrs` in favor of `EvaluationDomainExt`
- general best-practices improvements

* fix: remove unnecessary import renaming

* fix: use Range instead of RangeInclusive

* fix: improve CI workflow, include clippy and docs

* chore: fix typo

* fix: resolve comments, suggestions, and some formatting

- fixed some `clippy` lints directly instead of leaving `allow` cues, left others for future refactoring
- fixed old jubjub comment
- removed `crate::error::Result` type
- remove some type declaration redundancies
- sorted `derive` macro invocations
- added warning denial to CI
- resolved other PR comments

Co-authored-by: David Nevado <david.nevado@iohk.io>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,11 +24,15 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           override: false
+      - name: Run clippy
+        with:
+          command: clippy
+          args: --verbose --release --workspace --examples --tests --all-features -- -D warnings
       - name: Run tests
         uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --verbose --release --all --all-features
+          args: --verbose --release --workspace --all-features -- -D warnings
 
   build:
     if: github.event.pull_request.draft == false
@@ -76,7 +80,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: doc
-          args: --all --document-private-items
+          args: --workspace --document-private-items --all-features
 
   fmt:
     if: github.event.pull_request.draft == false
