--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ jobs:
         with:
           override: false
       - name: Run clippy
+        uses: actions-rs/cargo@v1
         with:
           command: clippy
           args: --verbose --release --workspace --examples --tests --all-features -- -D warnings
