Update CI to run on master too

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,16 @@
 name: CI checks
 
-on: 
+on:
   pull_request:
     types: [synchronize, opened, reopened, ready_for_review]
-env: 
+  push:
+    branches:
+      - master
+
+env:
   RUSTFLAGS: "-D warnings"
 
-## `actions-rs/toolchain@v1` overwrite set to false so that 
+## `actions-rs/toolchain@v1` overwrite set to false so that
 ## `rust-toolchain` is always used and the only source of truth.
 
 jobs:
@@ -82,7 +86,7 @@ jobs:
 
   fmt:
     if: github.event.pull_request.draft == false
-    
+
     name: Rustfmt
     timeout-minutes: 30
     runs-on: ubuntu-latest
