--- a/plonk-core/Cargo.toml
+++ b/plonk-core/Cargo.toml
@@ -10,35 +10,64 @@ description = "A pure-Rust implementation of the PLONK ZK-Proof algorithm."
 license = "MIT OR Apache-2.0"
 edition = "2021"
 
+[package.metadata.docs.rs]
+# To build locally:
+# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
+all-features = true
+rustdoc-args = ["--cfg", "doc_cfg"]
+
+[features]
+# Default Features
+default = [
+    "asm",
+    "itertools/default",
+    "parallel",
+    "rand_core/std",
+]
+
+# Raw Assembly
+asm = ["ark-ff/asm"]
+
+# Parallelism Features
+parallel = [
+    "ark-ec/parallel",
+    "ark-ff/parallel",
+    "ark-poly-commit/parallel",
+    "ark-poly/parallel",
+]
+
+# Enable Standard Library
+std = [
+    "ark-ec/std",
+    "ark-ff/std",
+]
+
+# Minimal Tracing Features
+trace = []
+
+# Tracing Printing Features
+trace-print = ["trace"]
+
 [dependencies]
-ark-ec = { version = "0.3", features = ["std"] }
-ark-ff = { version = "0.3", features = ["std"] }
-ark-poly = "0.3"
-ark-poly-commit = "0.3"
+ark-ec = { version = "0.3", default-features = false }
+ark-ff = { version = "0.3", default-features = false }
+ark-poly = { version = "0.3" }
+ark-poly-commit = { version = "0.3" }
 ark-serialize = { version = "0.3", features = ["derive"] }
 derivative = { version = "2.2.0", default-features = false, features = ["use_core"] }
 hashbrown = { version = "0.11.2", default-features = false, features = ["ahash"] }
 itertools = { version = "0.10.1", default-features = false }
 merlin = { version = "3.0", default-features = false }
-num-traits = "0.2.14"
+num-traits = { version = "0.2.14" }
 rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
 
-[features]
-default = [
-    "rand_core/std",
-    "itertools/default",
-    "parallel",
-    "asm"
-]
-parallel = [
-    "ark-ff/parallel",
-    "ark-poly/parallel",
-    "ark-ec/parallel",
-    "ark-poly-commit/parallel"
-]
-asm = [
-    "ark-ff/asm"
-]
-trace = []
-trace-print = ["trace"]
+[dev-dependencies]
+ark-bls12-377 = "0.3"
+ark-bls12-381 = "0.3"
+ark-ed-on-bls12-377 = "0.3"
+ark-ed-on-bls12-381 = "0.3"
+criterion = "0.3"
+paste = "1.0.6"
+rand = "0.8.0"
+tempdir = "0.3"
 
