--- a/plonk-hashing/Cargo.toml
+++ b/plonk-hashing/Cargo.toml
@@ -10,6 +10,16 @@ description = "A pure-Rust implementation of the PLONK ZK-Proof algorithm."
 license = "MIT OR Apache-2.0"
 edition = "2021"
 
+[package.metadata.docs.rs]
+# To build locally:
+# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
+all-features = true
+rustdoc-args = ["--cfg", "doc_cfg"]
+
+[features]
+# Enable Standard Library
+std = []
+
 [dependencies]
 plonk-core = { path = "../plonk-core" }
 
