Make `gadget_tester` public.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,15 +2,15 @@
 name = "ark-plonk"
 version = "0.8.2"
 authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>",
-           "Luke Pearson <luke@polychain.capital>",
-           "Jules De Smit <jules@aleo.org>",
-           "Joshua Fitzgerald <joshua@heliax.dev>",
-           "Carlos Perez <carlos.perezbaro@iohk.io>",
-           "David Nevado <david.nevado@iohk.io>"]
+    "Luke Pearson <luke@polychain.capital>",
+    "Jules De Smit <jules@aleo.org>",
+    "Joshua Fitzgerald <joshua@heliax.dev>",
+    "Carlos Perez <carlos.perezbaro@iohk.io>",
+    "David Nevado <david.nevado@iohk.io>"]
 readme = "README.md"
 repository = "https://github.com/rust-zkp/ark-plonk"
 keywords = ["cryptography", "plonk", "zk-snarks", "zero-knowledge", "crypto"]
-categories =["algorithms", "cryptography", "science"]
+categories = ["algorithms", "cryptography", "science"]
 description = "A pure-Rust implementation of the PLONK ZK-Proof algorithm."
 exclude = [
     "**/.gitignore",
@@ -64,6 +64,7 @@ asm = [
 ]
 trace = []
 trace-print = ["trace"]
+test = []
 
 [[bench]]
 name = "plonk"
