--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: macos-latest
+    runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
@@ -30,9 +30,8 @@ jobs:
         run: mdbook build plonk-book/
 
       - name: Move book to docs
-        run: |
-          mv ./plonk-book/book/* ./docs
-
+        run: mv ./plonk-book/book/* ./docs
+        
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
