--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ license = "MPL-2.0"
 edition = "2021"
 
 [dependencies]
+ark-std = { version = "0.3", features = ["std"] }
 ark-ec = { version = "0.3", features = ["std"] }
 ark-ff = { version = "0.3", features = ["std"] }
 ark-poly = "0.3"
