--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ license = "MPL-2.0"
 edition = "2021"
 
 [dependencies]
+ark-bls12-381 = "0.3"
 ark-std = { version = "0.3", features = ["std"] }
 ark-ec = { version = "0.3", features = ["std"] }
 ark-ff = { version = "0.3", features = ["std"] }
@@ -36,6 +37,7 @@ itertools = { version = "0.10.1", default-features = false }
 merlin = { version = "3.0", default-features = false }
 num-traits = "0.2.14"
 rand = { version = "0.8", default-features = false, features = ["getrandom"] }
+blake2 = "0.9"
 
 [dev-dependencies]
 ark-sponge = "0.3"
@@ -49,7 +51,7 @@ paste = "1.0.6"
 rand = "0.8.0"
 tempdir = "0.3"
 ark-vesta = "0.3"
-blake2 = "0.10"
+
 
 [features]
 default = [
