--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ plonk-core = { path = "plonk-core" }
 plonk-hashing = { path = "plonk-hashing" }
 
 [dev-dependencies]
+ark-ff = "0.3"
 ark-sponge = "0.3"
 ark-std = "0.3"
 ark-bls12-377 = "0.3"
