--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,9 @@ plonk-core = { path = "plonk-core" }
 plonk-hashing = { path = "plonk-hashing" }
 
 [dev-dependencies]
+ark-ff = "0.3"
+ark-sponge = "0.3"
+ark-std = "0.3"
 ark-bls12-377 = "0.3"
 ark-bls12-381 = "0.3"
 ark-ec = "0.3"
@@ -49,6 +52,8 @@ paste = "1.0.6"
 rand = "0.8.0"
 rand_core = "0.6"
 tempdir = "0.3"
+ark-vesta = "0.3"
+
 
 [[bench]]
 name = "plonk"
