--- a/plonk-book/book.toml
+++ b/plonk-book/book.toml
@@ -4,3 +4,10 @@ language = "en"
 multilingual = false
 src = "src"
 title = "ARK-PLONK Book"
+
+[output.html]
+[output.katex]
+
+[preprocessor.katex]
+macros = "macros.txt"
+
