Remove nightly build for docs
The infra docs don't compile w/o
the nightly build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,7 +87,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: doc
-          args: --workspace --document-private-items --all-features
+          args: --workspace --all-features
 
   fmt:
     if: github.event.pull_request.draft == false
