Compile book instructions (#93)
* ark-plonk book

* curves+lagrange

* correct link images

* chapter 3 first part

* implementation details

* fix

* benchmarks

* state of the art

* state of the art 2

* verifier

* modules

* modules cont

* gadgets

* proof generation

* fix

* Spelling/grammar

* fix permutation algorithm

* change name to plonk-book

* deploy plonk-book

* custom gates design

* fix bug book deployement

* extra wire fan-in3

* range gate

* Grammar

* logic gate

* lookup tables

* lookup2

* plookup protocol

* plonkup

* plonkup algo

* prover lookup

* prover cont

* multiple tables

* continuous vs alternating methods

* plonkup protocol

* correct typos

* Replace Ark-Plonk by Plonk

* fix changes

* Plonk book (part 2) (#92)

Co-authored-by: Luke Pearson <pearsonluke73@gmail.com>

* Fix broken cmd line

* Remove nightly build for docs

The infra docs don't compile w/o
the nightly build

Co-authored-by: Errol Drummond <erroldrummond@pm.me>
Co-authored-by: Luke Pearson <pearsonluke73@gmail.com>

--- a/plonk-book/book.toml
+++ b/plonk-book/book.toml
@@ -3,7 +3,7 @@ authors = ["mathcrypto"]
 language = "en"
 multilingual = false
 src = "src"
-title = "ARK-PLONK Book"
+title = "PLONK Book"
 
 [output.html]
 [output.katex]
