Include Rand crate

--- a/plonk-core/Cargo.toml
+++ b/plonk-core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "plonk-core"
-version = "0.8.2"
+version = "0.0.0"
 authors = ["ZK-GARAGE Authors"]
 readme = "README.md"
 repository = "https://github.com/zk-garage/plonk"
@@ -63,6 +63,7 @@ itertools = { version = "0.10.1", default-features = false }
 merlin = { version = "3.0", default-features = false }
 num-traits = { version = "0.2.14" }
 rand = { version = "0.8", default-features = false, features = ["getrandom"] }
+rand_core = "0.6.3"
 
 [dev-dependencies]
 ark-bls12-377 = "0.3"
