--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   RUSTFLAGS: "-D warnings"
-  RUST_BACKTRACE: "1"
+  RUST_BACKTRACE: "full"
 
 ## `actions-rs/toolchain@v1` overwrite set to false so that
 ## `rust-toolchain` is always used and the only source of truth.
