non-generic enough

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ ark-ed-on-bls12-377 = "0.3"
 ark-ed-on-bls12-381 = "0.3"
 ark-poly = "0.3"
 ark-poly-commit = "0.3"
+blake2 = "0.9"
 criterion = "0.3"
 derivative = "2.2.0"
 paste = "1.0.6"
