--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: macos-latest 
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
@@ -31,8 +31,8 @@ jobs:
 
       - name: Move book to docs
         run: |
-          mv ./plonk-book/book/* ./docs
-   
+          mkdir ./docs && mv ./plonk-book/book/* ./docs
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
