use IndexMap instead of HashMap for cleaner combine_split

--- a/plonk-core/Cargo.toml
+++ b/plonk-core/Cargo.toml
@@ -59,6 +59,7 @@ ark-poly-commit = { version = "0.3" }
 ark-serialize = { version = "0.3", features = ["derive"] }
 derivative = { version = "2.2.0", default-features = false, features = ["use_core"] }
 hashbrown = { version = "0.11.2", default-features = false, features = ["ahash"] }
+indexmap = { version = "1.8.1", default-features = false }
 itertools = { version = "0.10.1", default-features = false }
 merlin = { version = "3.0", default-features = false }
 num-traits = { version = "0.2.14" }
