Adjust `trace-print` features

--- a/plonk-core/Cargo.toml
+++ b/plonk-core/Cargo.toml
@@ -45,7 +45,7 @@ std = [
 trace = []
 
 # Tracing Printing Features
-trace-print = ["trace"]
+trace-print = ["trace", "std"]
 
 [dependencies]
 ark-bls12-381 = "0.3"
@@ -72,3 +72,4 @@ ark-ed-on-bls12-381 = "0.3"
 criterion = "0.3"
 paste = "1.0.6"
 tempdir = "0.3"
+cfg-if = "0.1"
