--- a/plonk-hashing/Cargo.toml
+++ b/plonk-hashing/Cargo.toml
@@ -21,4 +21,23 @@ rustdoc-args = ["--cfg", "doc_cfg"]
 std = []
 
 [dependencies]
-plonk-core = { path = "../plonk-core" }
+plonk-core = { path = "../plonk-core", features = [ "trace" ] }
+ark-ec = { version = "0.3", features = ["std"] }
+ark-ff = { version = "0.3", features = ["std"] }
+ark-serialize = { version = "0.3", features = ["derive"] }
+ark-poly = "0.3"
+ark-poly-commit = "0.3"
+ark-crypto-primitives = { version = "^0.3.0", features = ["r1cs"], default-features = false }
+ark-std = { version = "^0.3.0", default-features = false }
+itertools = { version = "0.10.1", default-features = false }
+num-traits = "0.2.14"
+derivative = { version = "2.2.0", default-features = false, features = ["use_core"] }
+hashbrown = { version = "0.11.2", default-features = false, features = ["ahash"] }
+ark-relations = "0.3.0"
+ark-r1cs-std = "0.3.1"
+thiserror = "1.0.30"
+
+[dev-dependencies]
+ark-bls12-381 = { version = "0.3", features = ["curve"] }
+ark-ed-on-bls12-381 = { version = "0.3" }
+neptune = { version = "7.2.0" }
